Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -33,7 +33,7 @@
   "dn15:4.1": "’Rođenje je uzrok starosti i smrti’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:4.2": "Zamisli da nema bilo kakvog rođenja, bilo koga, bilo gde, dakle",
   "dn15:4.3": "bogova u stanje bogova, nebesnika u stanje nebesnika, demona u stanje demona, duhova, ljudi, četvoronožaca, ptica i gmizavaca, svako u svoje stanje, dakle da ne postoji bilo kakvo rođenje, bilo gde. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se  starost i smrt mogli bilo gde uočiti?”",
-  "dn15:4.4": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:4.4": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:4.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka starosti i smrti, dakle rođenje.",
   "dn15:5.1": "’Bivanje je uzrok rođenju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:5.2": "Zamisli da nema bilo kakvog bivanja, za bilo koga, bilo gde, dakle",
