Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -102,5 +102,6 @@
   "dn15:19.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov osećaja, dakle kontakt.",
   "dn15:20.1": "’Mentalno-materijalno je uzrok kontaktu’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:20.2": "Zamisli da nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis mentalnog tela, da li bi se kontakt označivanja u materijalnom telu bilo gde mogao uočiti?”",
-  "dn15:20.3": "„Sigurno da ne bi, poštovani gospodine.”"
+  "dn15:20.3": "„Sigurno da ne bi, poštovani gospodine.”",
+  "dn15:20.4": "„A  akonema \nbilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima \npostoji opis mentalnog tela, da li bi se kontakt označivanja u \nmaterijalnom telu bilo gde mogao uočiti?”"
 }
