--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -103,5 +103,6 @@
   "dn15:20.1": "’Mentalno-materijalno je uzrok kontaktu’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:20.2": "Zamisli da nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis mentalnog tela, da li bi se kontakt označivanja u materijalnom telu bilo gde mogao uočiti?”",
   "dn15:20.3": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:20.4": "„A ako nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis materijalnog tela, da li bi se kontakt označivanja u mentalnom telu bilo gde mogao uočiti?”"
+  "dn15:20.4": "„A ako nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis materijalnog tela, da li bi se kontakt označivanja u mentalnom telu bilo gde mogao uočiti?”",
+  "dn15:20.5": "„Sigurno da ne bi, poštovani gospodine.”"
 }
