--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -98,7 +98,7 @@
   "dn15:19.1": "’Kontakt je uzrok osećaju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:19.2": "Zamisli da nema bilo kakve kontakta, u bilo kome, bilo gde, dakle",
   "dn15:19.3": "kontakt oka, kontakt uha, kontakt nosa, kontakt jezika, kontakt tella i kontakt uma. U potpunom odsustvu kontakta, sa nestankom kontakta, da li bi se osećaj mogao bilo gde uočiti?”",
-  "dn15:19.4": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:19.4": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:19.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov osećaja, dakle kontakt.",
   "dn15:20.1": "’Mentalno-materijalno je uzrok kontaktu’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:20.2": "Zamisli da nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis mentalnog tela, da li bi se kontakt označivanja u materijalnom telu bilo gde mogao uočiti?”",
