Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -108,5 +108,6 @@
   "dn15:20.6": "„A ako nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima postoji opis mentalnog i materijalnog tela, da li bi se kontakt označivanja ili kontakt podražaja bilo gde mogali uočiti?”",
   "dn15:20.7": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:20.8": "„A ako nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima se mentalno-materijalno uočava, da li bi se kontakt bilo gde mogao uočiti?”",
-  "dn15:20.9": "„Sigurno da ne bi, poštovani gospodine.”"
+  "dn15:20.9": "„Sigurno da ne bi, poštovani gospodine.”",
+  "dn15:20.10": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov kontakta, dakle mentalno-materijalno."
 }
