Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -109,5 +109,6 @@
   "dn15:20.7": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:20.8": "„A ako nema bilo kakvih kvaliteta, crta, obeležja i atributa zahvaljujući kojima se mentalno-materijalno uočava, da li bi se kontakt bilo gde mogao uočiti?”",
   "dn15:20.9": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:20.10": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov kontakta, dakle mentalno-materijalno."
+  "dn15:20.10": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov kontakta, dakle mentalno-materijalno.",
+  "dn15:21.1": "’Svest je uzrok mentalno-materijalnom’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
