Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -111,5 +111,6 @@
   "dn15:20.9": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:20.10": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov kontakta, dakle mentalno-materijalno.",
   "dn15:21.1": "’Svest je uzrok mentalno-materijalnom’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:21.2": "Ako se svest ne bi spustila u majčinu matericu, da li bi se mentalno-materijalno uobličilo u toj materici?”"
+  "dn15:21.2": "Ako se svest ne bi spustila u majčinu matericu, da li bi se mentalno-materijalno uobličilo u toj materici?”",
+  "dn15:21.3": "„Sigurno da ne bi, poštovani gospodine.”"
 }
