--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -113,5 +113,6 @@
   "dn15:21.1": "’Svest je uzrok mentalno-materijalnom’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:21.2": "Ako se svest ne bi spustila u majčinu matericu, da li bi se mentalno-materijalno uobličilo u toj materici?”",
   "dn15:21.3": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:21.4": "„Ako bi je, pošto se spustila u tu matericu, svest napustila, da li bi se mentalno-materijalno rodilo u sadašnje stanje bivanja?”"
+  "dn15:21.4": "„Ako bi je, pošto se spustila u tu matericu, svest napustila, da li bi se mentalno-materijalno rodilo u sadašnje stanje bivanja?”",
+  "dn15:21.5": "„Sigurno da ne bi, poštovani gospodine.”"
 }
