Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -114,5 +114,6 @@
   "dn15:21.2": "Ako se svest ne bi spustila u majčinu matericu, da li bi se mentalno-materijalno uobličilo u toj materici?”",
   "dn15:21.3": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:21.4": "„Ako bi je, pošto se spustila u tu matericu, svest napustila, da li bi se mentalno-materijalno rodilo u sadašnje stanje bivanja?”",
-  "dn15:21.5": "„Sigurno da ne bi, poštovani gospodine.”"
+  "dn15:21.5": "„Sigurno da ne bi, poštovani gospodine.”",
+  "dn15:21.6": "„Ako bi svest dečaka ili devojčice bila presečena, da li bi mentalno-materijalno raslo, razvijalo se i dostiglo zrelost?”"
 }
