--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -117,5 +117,6 @@
   "dn15:21.5": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:21.6": "„Ako bi svest dečaka ili devojčice bila presečena, da li bi mentalno-materijalno raslo, razvijalo se i dostiglo zrelost?”",
   "dn15:21.7": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:21.8": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov mentalno-materijalnog, dakle svest."
+  "dn15:21.8": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov mentalno-materijalnog, dakle svest.",
+  "dn15:22.1": "’Mentalno-materijalno je uzrok svesti’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
