--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -120,5 +120,6 @@
   "dn15:21.8": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov mentalno-materijalnog, dakle svest.",
   "dn15:22.1": "’Mentalno-materijalno je uzrok svesti’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:22.2": "Ako svest ne bi imala uporište u mentalno-materijalnom, da li bi se nastanak ovog okeana patnje – budućih rođenja, starenja i smrti – bilo gde moglo uočiti?”",
-  "dn15:22.3": "„Sigurno da ne bi, poštovani gospodine.”"
+  "dn15:22.3": "„Sigurno da ne bi, poštovani gospodine.”",
+  "dn15:22.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov svest, dakle mentalno-materijalno."
 }
