--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.106:1.15": "Das ist der Ursprung des Leidens. ",
   "sn35.106:2.1": "Und was ist das Enden des Leidens? ",
   "sn35.106:2.2": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
-  "sn35.106:2.3": "Berührung ist eine Bedingung für Gefühl. "
+  "sn35.106:2.3": "Berührung ist eine Bedingung für Gefühl. ",
+  "sn35.106:2.4": "Gefühl ist eine Bedingung für Verlangen. "
 }
