--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.106:2.4": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.106:2.5": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
   "sn35.106:2.6": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
-  "sn35.106:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. "
+  "sn35.106:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. ",
+  "sn35.106:2.8": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. "
 }
