--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.106:2.6": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
   "sn35.106:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. ",
   "sn35.106:2.8": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. ",
-  "sn35.106:2.9": "So hört diese ganze Masse des Leidens auf. "
+  "sn35.106:2.9": "So hört diese ganze Masse des Leidens auf. ",
+  "sn35.106:2.10": "Das ist das Enden des Leidens. … "
 }
