--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn35.106:2.10": "Das ist das Enden des Leidens. … ",
   "sn35.106:2.12": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.106:2.13": "Berührung ist eine Bedingung für Gefühl. ",
-  "sn35.106:2.14": "Gefühl ist eine Bedingung für Verlangen. "
+  "sn35.106:2.14": "Gefühl ist eine Bedingung für Verlangen. ",
+  "sn35.106:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. "
 }
