--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn35.106:2.13": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.106:2.14": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.106:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
-  "sn35.106:2.16": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. "
+  "sn35.106:2.16": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
+  "sn35.106:2.17": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. "
 }
