--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn35.106:2.16": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
   "sn35.106:2.17": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. ",
   "sn35.106:2.18": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. ",
-  "sn35.106:2.19": "So hört diese ganze Masse des Leidens auf. "
+  "sn35.106:2.19": "So hört diese ganze Masse des Leidens auf. ",
+  "sn35.106:2.20": "Das ist das Enden des Leidens.“ "
 }
