--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.107:0.1": "Verbundene Lehrreden 35.107 "
+  "sn35.107:0.1": "Verbundene Lehrreden 35.107 ",
+  "sn35.107:0.2": "11. Das Kapitel über Geborgenheit "
 }
