Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.107:0.2": "11. Das Kapitel über Geborgenheit ",
   "sn35.107:0.3": "Der Ursprung der Welt ",
   "sn35.107:1.1": "„Mönche und Nonnen, ich will euch den Ursprung und das Enden der Welt lehren. ",
-  "sn35.107:1.2": "Hört zu … "
+  "sn35.107:1.2": "Hört zu … ",
+  "sn35.107:1.3": "Und was, Mönche und Nonnen, ist der Ursprung der Welt? "
 }
