--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.107:0.3": "Der Ursprung der Welt ",
   "sn35.107:1.1": "„Mönche und Nonnen, ich will euch den Ursprung und das Enden der Welt lehren. ",
   "sn35.107:1.2": "Hört zu … ",
-  "sn35.107:1.3": "Und was, Mönche und Nonnen, ist der Ursprung der Welt? "
+  "sn35.107:1.3": "Und was, Mönche und Nonnen, ist der Ursprung der Welt? ",
+  "sn35.107:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. "
 }
