--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.107:1.2": "Hört zu … ",
   "sn35.107:1.3": "Und was, Mönche und Nonnen, ist der Ursprung der Welt? ",
   "sn35.107:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
-  "sn35.107:1.5": "Berührung ist eine Bedingung für Gefühl. "
+  "sn35.107:1.5": "Berührung ist eine Bedingung für Gefühl. ",
+  "sn35.107:1.6": "Gefühl ist eine Bedingung für Verlangen. "
 }
