Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.107:1.5": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.107:1.6": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.107:1.7": "Verlangen ist eine Bedingung für Ergreifen. ",
-  "sn35.107:1.8": "Ergreifen ist eine Bedingung für fortgesetztes Dasein. "
+  "sn35.107:1.8": "Ergreifen ist eine Bedingung für fortgesetztes Dasein. ",
+  "sn35.107:1.9": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. "
 }
