Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.107:1.8": "Ergreifen ist eine Bedingung für fortgesetztes Dasein. ",
   "sn35.107:1.9": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. ",
   "sn35.107:1.10": "Wiedergeburt ist eine Bedingung für das Zustandekommen von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
-  "sn35.107:1.11": "Das ist der Ursprung der Welt. … "
+  "sn35.107:1.11": "Das ist der Ursprung der Welt. … ",
+  "sn35.107:1.13": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. "
 }
