--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.107:1.11": "Das ist der Ursprung der Welt. … ",
   "sn35.107:1.13": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.107:1.14": "Berührung ist eine Bedingung für Gefühl. ",
-  "sn35.107:1.15": "Gefühl ist eine Bedingung für Verlangen. "
+  "sn35.107:1.15": "Gefühl ist eine Bedingung für Verlangen. ",
+  "sn35.107:1.16": "Verlangen ist eine Bedingung für Ergreifen. "
 }
