--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.107:1.15": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.107:1.16": "Verlangen ist eine Bedingung für Ergreifen. ",
   "sn35.107:1.17": "Ergreifen ist eine Bedingung für fortgesetztes Dasein. ",
-  "sn35.107:1.18": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. "
+  "sn35.107:1.18": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. ",
+  "sn35.107:1.19": "Wiedergeburt ist eine Bedingung für das Zustandekommen von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
 }
