--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.107:1.19": "Wiedergeburt ist eine Bedingung für das Zustandekommen von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
   "sn35.107:1.20": "Das ist der Ursprung der Welt. ",
   "sn35.107:2.1": "Und was ist das Enden der Welt? ",
-  "sn35.107:2.2": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. "
+  "sn35.107:2.2": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
+  "sn35.107:2.3": "Berührung ist eine Bedingung für Gefühl. "
 }
