--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn35.107:2.1": "Und was ist das Enden der Welt? ",
   "sn35.107:2.2": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.107:2.3": "Berührung ist eine Bedingung für Gefühl. ",
-  "sn35.107:2.4": "Gefühl ist eine Bedingung für Verlangen. "
+  "sn35.107:2.4": "Gefühl ist eine Bedingung für Verlangen. ",
+  "sn35.107:2.5": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. "
 }
