Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn35.107:2.3": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.107:2.4": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.107:2.5": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
-  "sn35.107:2.6": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. "
+  "sn35.107:2.6": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
+  "sn35.107:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. "
 }
