--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn35.107:2.5": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
   "sn35.107:2.6": "Wenn Ergreifen aufhört, hört fortgesetztes Dasein auf. ",
   "sn35.107:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. ",
-  "sn35.107:2.8": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. "
+  "sn35.107:2.8": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. ",
+  "sn35.107:2.9": "So hört diese ganze Masse des Leidens auf. "
 }
