--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn35.107:2.7": "Wenn fortgesetztes Dasein aufhört, hört Wiedergeburt auf. ",
   "sn35.107:2.8": "Wenn Wiedergeburt aufhört, hören Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis auf. ",
   "sn35.107:2.9": "So hört diese ganze Masse des Leidens auf. ",
-  "sn35.107:2.10": "Das ist das Enden der Welt. … "
+  "sn35.107:2.10": "Das ist das Enden der Welt. … ",
+  "sn35.107:2.12": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. "
 }
