--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn35.107:2.9": "So hört diese ganze Masse des Leidens auf. ",
   "sn35.107:2.10": "Das ist das Enden der Welt. … ",
   "sn35.107:2.12": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. ",
-  "sn35.107:2.13": "Berührung ist eine Bedingung für Gefühl. "
+  "sn35.107:2.13": "Berührung ist eine Bedingung für Gefühl. ",
+  "sn35.107:2.14": "Gefühl ist eine Bedingung für Verlangen. "
 }
