--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn35.107:2.12": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.107:2.13": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.107:2.14": "Gefühl ist eine Bedingung für Verlangen. ",
-  "sn35.107:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. "
+  "sn35.107:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
+  "sn35.107:2.16": "Wenn Ergreifen aufhört … "
 }
