--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.107:2.13": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.107:2.14": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.107:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
-  "sn35.107:2.16": "Wenn Ergreifen aufhört … "
+  "sn35.107:2.16": "Wenn Ergreifen aufhört … ",
+  "sn35.107:2.17": "So hört diese ganze Masse des Leidens auf. "
 }
