--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.107_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn35.107:2.14": "Gefühl ist eine Bedingung für Verlangen. ",
   "sn35.107:2.15": "Wenn dieses Verlangen schwindet und restlos aufhört, hört Ergreifen auf. ",
   "sn35.107:2.16": "Wenn Ergreifen aufhört … ",
-  "sn35.107:2.17": "So hört diese ganze Masse des Leidens auf. "
+  "sn35.107:2.17": "So hört diese ganze Masse des Leidens auf. ",
+  "sn35.107:2.18": "Das ist das Enden der Welt.“ "
 }
