Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn35.108:0.3": "Ich bin besser ",
   "sn35.108:1.1": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift und worauf besteht, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
   "sn35.108:2.1": "„Unsere Lehren wurzeln im Buddha …“ ",
-  "sn35.108:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘. … "
+  "sn35.108:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift und auf dem Auge besteht, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘. … "
 }
