--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.108:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift und auf dem Auge besteht, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘. … ",
   "sn35.108:3.3": "Wenn der Geist besteht, weil man den Geist ergreift und auf dem Geist besteht, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘. ",
   "sn35.108:3.4": "Was denkt ihr, Mönche und Nonnen? ",
-  "sn35.108:3.5": "Ist das Auge beständig oder unbeständig?“ "
+  "sn35.108:3.5": "Ist das Auge beständig oder unbeständig?“ ",
+  "sn35.108:4.1": "„Unbeständig, Herr.“ "
 }
