Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.108:3.3": "Wenn der Geist besteht, weil man den Geist ergreift und auf dem Geist besteht, denken Menschen: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘. ",
   "sn35.108:3.4": "Was denkt ihr, Mönche und Nonnen? ",
   "sn35.108:3.5": "Ist das Auge beständig oder unbeständig?“ ",
-  "sn35.108:4.1": "„Unbeständig, Herr.“ "
+  "sn35.108:4.1": "„Unbeständig, Herr.“ ",
+  "sn35.108:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
