--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.108:3.4": "Was denkt ihr, Mönche und Nonnen? ",
   "sn35.108:3.5": "Ist das Auge beständig oder unbeständig?“ ",
   "sn35.108:4.1": "„Unbeständig, Herr.“ ",
-  "sn35.108:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn35.108:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn35.108:6.1": "„Leiden, Herr.“ "
 }
