Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.108:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.108:6.1": "„Leiden, Herr.“ ",
   "sn35.108:7.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
-  "sn35.108:8.1": "„Nein, Herr.“ … "
+  "sn35.108:8.1": "„Nein, Herr.“ … ",
+  "sn35.108:10.1": "„Ist der Geist beständig oder unbeständig?“ "
 }
