--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.108:7.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
   "sn35.108:8.1": "„Nein, Herr.“ … ",
   "sn35.108:10.1": "„Ist der Geist beständig oder unbeständig?“ ",
-  "sn35.108:11.1": "„Unbeständig, Herr.“ "
+  "sn35.108:11.1": "„Unbeständig, Herr.“ ",
+  "sn35.108:12.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ "
 }
