Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.108:8.1": "„Nein, Herr.“ … ",
   "sn35.108:10.1": "„Ist der Geist beständig oder unbeständig?“ ",
   "sn35.108:11.1": "„Unbeständig, Herr.“ ",
-  "sn35.108:12.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ "
+  "sn35.108:12.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
+  "sn35.108:13.1": "„Leiden, Herr.“ "
 }
