Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.108:11.1": "„Unbeständig, Herr.“ ",
   "sn35.108:12.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
   "sn35.108:13.1": "„Leiden, Herr.“ ",
-  "sn35.108:14.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ "
+  "sn35.108:14.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
+  "sn35.108:15.1": "„Nein, Herr.“ "
 }
