--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.108:12.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
   "sn35.108:13.1": "„Leiden, Herr.“ ",
   "sn35.108:14.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
-  "sn35.108:15.1": "„Nein, Herr.“ "
+  "sn35.108:15.1": "„Nein, Herr.“ ",
+  "sn35.108:16.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, vom Ohr, von der Nase, von der Zunge, vom Körper und vom Geist. "
 }
