--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.108_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.108:14.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch Menschen denken: ‚Ich bin besser‘ oder ‚Ich bin gleich‘ oder ‚Ich bin schlechter‘?“ ",
   "sn35.108:15.1": "„Nein, Herr.“ ",
   "sn35.108:16.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, vom Ohr, von der Nase, von der Zunge, vom Körper und vom Geist. ",
-  "sn35.108:16.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. "
+  "sn35.108:16.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
+  "sn35.108:16.3": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
 }
