Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.109:0.1": "Verbundene Lehrreden 35.109 ",
-  "sn35.109:0.2": "11. Das Kapitel über Geborgenheit "
+  "sn35.109:0.2": "11. Das Kapitel über Geborgenheit ",
+  "sn35.109:0.3": "Dinge, die einen leicht fesseln "
 }
