--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -984,6 +984,7 @@
   "sn-name:1090.sn35.106": "Der Ursprung des Leidens ",
   "sn-name:1091.sn35.107": "Der Ursprung der Welt ",
   "sn-name:1092.sn35.108": "Ich bin besser ",
+  "sn-name:1093.sn35.109": "Dinge, die einen leicht fesseln ",
   "sn-name:1097.sn35.113": "Mithören ",
   "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
