Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.109:0.1": "Verbundene Lehrreden 35.109 ",
   "sn35.109:0.2": "11. Das Kapitel über Geborgenheit ",
-  "sn35.109:0.3": "Dinge, die einen leicht fesseln "
+  "sn35.109:0.3": "Dinge, die einen leicht fesseln ",
+  "sn35.109:1.1": "„Mönche und Nonnen, ich will euch die Dinge lehren, die einen leicht fesseln, sowie die Fessel. "
 }
