--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.110:0.1": "Verbundene Lehrreden 35.110 "
+  "sn35.110:0.1": "Verbundene Lehrreden 35.110 ",
+  "sn35.110:0.2": "11. Das Kapitel über Geborgenheit "
 }
