Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.110:1.5": "Das Sehnen und Begehren nach ihm ist das Ergreifen. ",
   "sn35.110:1.6": "Das Ohr … Die Nase … Die Zunge … Der Körper … ",
   "sn35.110:1.7": "Der Geist ist ein Ding, das zum Ergreifen einlädt. ",
-  "sn35.110:1.8": "Das Sehnen und Begehren nach ihm ist das Ergreifen. "
+  "sn35.110:1.8": "Das Sehnen und Begehren nach ihm ist das Ergreifen. ",
+  "sn35.110:1.9": "Das nennt man die Dinge, die zum Ergreifen einladen, und das ist das Ergreifen.“ "
 }
