Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.111:0.1": "Verbundene Lehrreden 35.111 ",
-  "sn35.111:0.2": "11. Das Kapitel über Geborgenheit "
+  "sn35.111:0.2": "11. Das Kapitel über Geborgenheit ",
+  "sn35.111:0.3": "Vollständiges Verstehen innen "
 }
