Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -159,7 +159,7 @@
   "sn-name:158.sn4.2": "In Gestalt eines Elefantenkönigs ",
   "sn-name:159.sn4.3": "Schön ",
   "sn-name:160.sn4.4": "Māras Schlinge (1) ",
-  "sn-name:161.sn4.5": "Māras Schlingen (2) ",
+  "sn-name:161.sn4.5": "Māras Schlinge (2) ",
   "sn-name:162.sn4.6": "Eine Schlange ",
   "sn-name:163.sn4.7": "Schlafen ",
   "sn-name:164.sn4.8": "Entzücken ",
