Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.114:3.1": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.114:3.2": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, ",
   "sn35.114:3.3": "nennt man sie eine Nonne, die in Māras Schlupfwinkel festgesetzt ist, die in Māras Bann geraten und in Māras Schlinge gefangen ist. ",
-  "sn35.114:3.4": "Sie ist von Māras Fesseln gebunden, und der Böse kann mit ihr machen, was er will. "
+  "sn35.114:3.4": "Sie ist von Māras Fesseln gebunden, und der Böse kann mit ihr machen, was er will. ",
+  "sn35.114:4.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
