Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -991,6 +991,7 @@
   "sn-name:1097.sn35.113": "Mithören ",
   "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn-name:1099.sn35.114": "Māras Schlinge (1) ",
+  "sn-name:1100.sn35.115": "Māras Schlinge (2) ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
