Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn35.116:0.3": "Ans Ende der Welt gehen ",
   "sn35.116:1.1": "„Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. ",
   "sn35.116:1.2": "Aber ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen.“ ",
-  "sn35.116:1.3": "Nachdem er gesprochen hatte, erhob sich der  von seinem Sitz und ging zu seiner Hütte. "
+  "sn35.116:1.3": "Nachdem er gesprochen hatte, erhob sich der Buddha von seinem Sitz und ging zu seiner Hütte. "
 }
