Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.116:6.1": "„Sicherlich ist er der Buddha, der erkennt und sieht. Sicherlich ist er das Sehen, ist er das Erkennen, ist er die Wahrheit, ist er die Heiligkeit. Sicherlich ist er der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. ",
   "sn35.116:6.3": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
   "sn35.116:6.4": "So wie er es erklärt hätte, hätten wir es behalten sollen. ",
-  "sn35.116:6.5": "Dennoch wird der Ehrwürdige Ānanda vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. "
+  "sn35.116:6.5": "Dennoch wird der Ehrwürdige Ānanda vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
+  "sn35.116:6.6": "Du kannst die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. "
 }
