Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn35.116:8.5": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, ",
   "sn35.116:8.6": "nennt man in der Lehre des Edlen die Welt. ",
   "sn35.116:8.7": "Und wodurch in der Welt nimmt man die Welt wahr und bildet sich die Welt ein? ",
-  "sn35.116:8.8": "Durch das Auge in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. "
+  "sn35.116:8.8": "Durch das Auge in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. ",
+  "sn35.116:8.9": "Durch das Ohr in der Welt … "
 }
