Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn35.116:8.9": "Durch das Ohr in der Welt … ",
   "sn35.116:8.10": "Durch die Nase in der Welt … ",
   "sn35.116:8.11": "Durch die Zunge in der Welt … ",
-  "sn35.116:8.12": "Durch den Körper in der Welt … "
+  "sn35.116:8.12": "Durch den Körper in der Welt … ",
+  "sn35.116:8.13": "Durch den Geist in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. "
 }
