Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn35.116:8.11": "Durch die Zunge in der Welt … ",
   "sn35.116:8.12": "Durch den Körper in der Welt … ",
   "sn35.116:8.13": "Durch den Geist in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. ",
-  "sn35.116:8.14": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, "
+  "sn35.116:8.14": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, ",
+  "sn35.116:8.15": "nennt man in der Lehre des Edlen die Welt. "
 }
