Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn35.116:8.13": "Durch den Geist in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. ",
   "sn35.116:8.14": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, ",
   "sn35.116:8.15": "nennt man in der Lehre des Edlen die Welt. ",
-  "sn35.116:8.16": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: "
+  "sn35.116:8.16": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
+  "sn35.116:8.17": "‚Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. "
 }
